oh-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web-dev
------------------
apiVersion: v1
kind: Namespace
metadata:
  name: api-dev
------------------
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-basic
