user-java.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-java-deployment
  labels:
    app: user-java

spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-java

  template:
    metadata:
      labels:
        app: user-java

    spec:
      containers:
      - name: user-java
        image: registryczp7206.azurecr.io/user-java/poi:1.0
        ports:
        - containerPort: 80
