trips-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tripsapi-service
  namespace: default
spec:
  selector:
    app: trips
  ports:
  - name: trips-http
    port: 80
    protocol: TCP
    targetPort: 80
  - name: trips-https
    port: 443
    protocol: TCP
    targetPort: 443
