tripview-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: "tripview-service"
  namespace: "default"
spec:
  ports:
    - port: 80
  type: LoadBalancer
  selector:
    app: "tripview"
