user-java-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-java-service

spec:
  selector:
    app: user-java

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
