web-dev-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: service
  namespace: web-dev
spec:
  type: ExternalName
  externalName: tripsapi-service.api-dev
