ingress.yaml

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: poi-ingress
  namespace: ingress-basic
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    #nginx.ingress.kubernetes.io/rewrite-target: /api/poi/$2
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: poi-service
          servicePort: 80
        path: /api/poi(/|$)(.*)
      - backend:
          serviceName: tripsapi-service
          servicePort: 80
        path: /api/trips(/|$)(.*)
      - backend:
          serviceName: trips-user
          servicePort: 80
        path: /api/user(/|$)(.*)
      - backend:
          serviceName: user-java-service
          servicePort: 80
        path: /api/user-java(/|$)(.*)
      - backend:
          serviceName: tripview-service
          servicePort: 80
        path: /(.*)
